# my-kidsview-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: automation.md  schema-introspection.json
src/kidsview_cli/: __init__.py  auth.py  cli.py  client.py  config.py  context.py  download.py  helpers.py  queries.py  session.py
src/kidsview_cli/commands/: calendar.py  chat.py  galleries.py  notifications.py  payments.py
tests/: test_auth_error.py  test_cli.py  test_client.py  test_context.py  test_download.py  test_gallery_logic.py  test_helpers_logic.py  test_schema.py  test_session.py
