[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kidsview-cli"
version = "0.2.0"
description = "CLI client for the Kidsview platform."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kidsview Contributors" }]
dependencies = [
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.8",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0",
  "pycognito>=2024.5.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "respx>=0.22.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.7.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "types-requests",
]

[project.scripts]
kidsview-cli = "kidsview_cli.cli:app"
kv-cli = "kidsview_cli.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "B", "I", "UP", "N", "SIM", "ASYNC", "S", "PL"]
lint.ignore = ["S101", "S105", "S106"]
lint.per-file-ignores = {"tests/**" = ["S101", "S105", "S106", "PLR2004"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
disable_error_code = ["import-untyped"]
exclude = ["tests/", "src/kidsview_cli/__init__\\.py"]
explicit_package_bases = true
[[tool.mypy.overrides]]
module = ["pycognito.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["pydantic_settings"]
ignore_missing_imports = true
follow_imports = "skip"
